--- a/kubernetes/minikube-ingress.yml
+++ b/kubernetes/minikube-ingress.yml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: minikube-ingress
   annotations:
+    kubernetes.io/ingress.class: "public"
 spec:
   rules:
   - host: hello.world
