--- a/kubernetes/chart/templates/minikube-ingress.yml
+++ b/kubernetes/chart/templates/minikube-ingress.yml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: minikube-ingress
   annotations:
-    kubernetes.io/ingress.class: "public"
+    ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: hello.world
